[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/entities/Ship.gd" type="Script" id=1]
[ext_resource path="res://scenes/entities/Bullet.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/images/ship-32.png" type="Texture" id=3]
[ext_resource path="res://assets/sounds/rocket.wav" type="AudioStream" id=4]

[sub_resource type="Gradient" id=1]

offsets = PoolRealArray( 0, 0.491124, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 0.804688, 0.472774, 0.119446, 1, 0.890625, 0, 0, 1 )

[sub_resource type="GradientTexture" id=2]

flags = 4
gradient = SubResource( 1 )
width = 2048

[sub_resource type="Curve" id=3]

min_value = 0.0
max_value = 1.0
bake_resolution = 100
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.51869, 0.800781 ), -1.56752, -1.56752, 0, 0, Vector2( 1, 0.285156 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]

flags = 4
width = 2048
curve = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]

render_priority = 0
trail_divisor = 1
emission_shape = 0
flag_align_y = false
flag_rotate_y = false
flag_disable_z = true
spread = 0.0
flatness = 0.0
gravity = Vector3( 0, 100, 0 )
initial_velocity = 0.0
initial_velocity_random = 0.0
angular_velocity = 0.0
angular_velocity_random = 0.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 0.0
linear_accel_random = 0.0
radial_accel = 0.0
radial_accel_random = 0.0
tangential_accel = 0.0
tangential_accel_random = 0.0
damping = 0.0
damping_random = 0.0
angle = 45.0
angle_random = 1.0
scale = 5.0
scale_random = 0.2
scale_curve = SubResource( 4 )
color_ramp = SubResource( 2 )
hue_variation = 0.0
hue_variation_random = 0.0
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false

[node name="Ship" type="RigidBody2D"]

input_pickable = false
collision_layer = 1
collision_mask = 1
mode = 0
mass = 4.0
friction = 0.1
bounce = 0.5
gravity_scale = -1.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 10
contact_monitor = true
sleeping = false
can_sleep = true
linear_velocity = Vector2( 0, 0 )
linear_damp = -1.0
angular_velocity = 0.0
angular_damp = 0.1
script = ExtResource( 1 )
_sections_unfolded = [ "Collision" ]
thrust = 20
max_speed = 80
rotation_speed = 2
ground_hit_velocity = 60
max_fuel = 100
fuel = 100
fuel_per_second = 1
Bullet = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="." index="0"]

texture = ExtResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="." index="1"]

visible = false
position = Vector2( 28, -4 )
build_mode = 0
polygon = PoolVector2Array( -28, -12, -33, -7, -33, 8, -36, 12, -36, 20, -20, 20, -20, 11, -23, 8, -23, -7 )
_sections_unfolded = [ "Material", "Pause", "Transform", "Visibility", "Z Index" ]

[node name="Turret" type="Position2D" parent="." index="2"]

visible = false
position = Vector2( 0, -16 )

[node name="Flames" type="Particles2D" parent="." index="3"]

show_behind_parent = true
position = Vector2( 0, 12 )
emitting = false
amount = 8
lifetime = 0.8
one_shot = false
preprocess = 0.0
speed_scale = 1.0
explosiveness = 0.0
randomness = 0.0
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = true
draw_order = 0
process_material = SubResource( 5 )
texture = null
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Process Material", "Time", "Visibility" ]

[node name="GunTimer" type="Timer" parent="." index="4"]

process_mode = 0
wait_time = 0.5
one_shot = false
autostart = false

[node name="RocketSound" type="AudioStreamPlayer" parent="." index="5"]

stream = ExtResource( 4 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[connection signal="body_entered" from="." to="." method="_on_Ship_body_entered"]

[connection signal="timeout" from="GunTimer" to="." method="_on_GunTimer_timeout"]


